fix bug on mobile age check

--- a/Front-End/assets/css/age-check.css
+++ b/Front-End/assets/css/age-check.css
@@ -27,7 +27,6 @@ body:has(#view-age-check.active) {
     flex-direction: column;
     gap: 1rem;
 }
-
 #age-check-birthdate {
     font-size: 2rem;
 }
@@ -55,4 +54,16 @@ label[for='age-check-birthdate'] {
 
     backdrop-filter: blur(30px);
     z-index: -1;
+}
+
+@media screen and (max-width: 1000px) {
+    .form-content {
+        width: 90vw;
+    }
+
+    #age-check-birthdate {
+        margin-inline: auto;
+        width: 85%;
+        font-size: 1.5rem;
+    }
 }
